src/objects/AIA_Workplan_Task_List__c.object
<CustomObject>
    <fields>
        <fullName>Assignee_Type__c</fullName>
        <label>Assignee Type</label>
        <picklist>
            <picklistValues>
                <fullName>User1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Workplan_Task_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Days_To_Complete__c</fullName>
        <label>Expected Days To Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Queue_Id__c</fullName>
        <label>Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Code__c</fullName>
        <label>Task Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <label>Task Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <label>Task Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Workplan Task List</label>
    <listViews>
        <fullName>AIA_Workplan_AIA_Workplan_Task_List</fullName>
        <filterScope>Queue</filterScope>
        <label>AIA Workplan</label>
        <queue>AIA_Workplan</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>WTL-{000000}</displayFormat>
        <label>AIA Workplan Task List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workplan Task List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>